[gd_scene load_steps=9 format=3 uid="uid://cbfxnobuq5sam"]

[ext_resource type="Script" path="res://scripts/start_game_cutscene-1.gd" id="1_e5gu7"]
[ext_resource type="Texture2D" uid="uid://buu1ctcwkiybx" path="res://assets/2d/cutscenes/C 1.png" id="2_nwk7l"]
[ext_resource type="Texture2D" uid="uid://d3vttl6ca40ns" path="res://assets/2d/cutscenes/C 3.png" id="3_jcfrf"]
[ext_resource type="Texture2D" uid="uid://bt7j0bx77g7x3" path="res://assets/2d/cutscenes/C 4.png" id="5_3bjim"]
[ext_resource type="Texture2D" uid="uid://qe311850bf7w" path="res://assets/2d/cutscenes/C 2.png" id="5_wk75c"]

[sub_resource type="Animation" id="Animation_shmm3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cut1-scene1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1648, -148)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cut1-scene1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cut1-scene2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1296, 860)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cut1-scene3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1552, -156)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cut1-scene4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1184, 812)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Cut1-scene2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Cut1-scene3:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Cut1-scene4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pkcg8"]
resource_name = "show_cutscene"
length = 9.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cut1-scene1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1640, -148), Vector2(-296, -148)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cut1-scene1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 5, 6.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cut1-scene2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1272, 844), Vector2(-288, 172)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cut1-scene2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 2, 5.7, 7.26667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cut1-scene3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1552, -156), Vector2(400, -156)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Cut1-scene3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2, 3, 6.5, 8.26667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Cut1-scene4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(528, 788), Vector2(528, 284)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Cut1-scene4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3, 4, 7.26667, 8.73333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3n0qx"]
_data = {
"RESET": SubResource("Animation_shmm3"),
"show_cutscene": SubResource("Animation_pkcg8")
}

[node name="StartGameCutscene-1" type="Node2D" groups=["faders"]]
position = Vector2(960, 540)
script = ExtResource("1_e5gu7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3n0qx")
}
autoplay = "show_cutscene"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -984.0
offset_top = -564.0
offset_right = 992.0
offset_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Cut1-scene1" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1648, -148)
texture = ExtResource("2_nwk7l")

[node name="Cut1-scene2" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1296, 860)
texture = ExtResource("3_jcfrf")

[node name="Cut1-scene3" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1552, -156)
texture = ExtResource("5_wk75c")

[node name="Cut1-scene4" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1184, 812)
texture = ExtResource("5_3bjim")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
